--- a/dbapi-ui/pom.xml
+++ b/dbapi-ui/pom.xml
@@ -39,7 +39,7 @@
                         </configuration>
                     </execution>-->
 
-                    <execution>
+                    <!--<execution>
                         <id>exec-npm-run-build</id>
                         <phase>validate</phase>
                         <goals>
@@ -53,7 +53,7 @@
                             </arguments>
                             <workingDirectory>${basedir}</workingDirectory>
                         </configuration>
-                    </execution>
+                    </execution>-->
 
                 </executions>
             </plugin>
